methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:7: error: not found: value break
      break;
      ^