methods.slug.SlugHunting.scala.code
def hunt() {
  var bis:Boolean = false
  while(bis==false){
    if(estSurBiscuit()){
      bis=true
      break;
    	}
    if(bis==false){
  		while(isFacingTrail()){
        	baisseBrosse()
    			avance()
    			leveBrosse()
      }
      left()
  	}
  }
  prendBiscuit()
	}

def isFacingTrail():Boolean = {
  if(estFaceMur()){
    return false
  }
  avance()
  if(getCouleurSol()==Color.green){
    recule()
    return true
  }
  else{
    recule()
    return false
  }
}